# BFHTW

./: .gitattributes  .gitignore  README.md  dev.txt  file_tree.txt  pytest.ini  requirements.txt
core/: mkdocs.yml  pyproject.toml
core/core/qdrant_storage/: raft_state.json
core/docs/reference/: bfhtw.md
core/docs/scripts/: generate_doc_tree.py
core/libexec/: messages.sh  test.sh
core/qdrant_storage/: raft_state.json
core/qdrant_storage/collections/bio_blocks/: version.info
core/qdrant_storage/qdrant_storage/: raft_state.json
core/requirements/: base.txt
core/site/scripts/: generate_doc_tree.py
core/src/: OncoMapAI.code-workspace  README.md  structure.txt  test_nxml.txt
core/src/BFHTW/: run_main_cli_demo.py  run_validation_demo.py
core/src/BFHTW/ai_assistants/: README.md  base_assistant.py  bert_assistant.py  openai_assistant.py  openai_rag_assistant.py  system_prompt.txt
core/src/BFHTW/data/: database.db
core/src/BFHTW/infrastructure/: README.md  save_env.sh  setup_qdrant.sh  setup_vm.sh
core/src/BFHTW/ingest/: ingest_pdf.py  insert_embeddings.py  insert_keywords_db.py
core/src/BFHTW/models/: README.md  bio_medical_entity_block.py  block_model.py  document_main.py  figure_metadata.py  meta_model.py  nxml_models.py  pdf_extraction.py  pdf_metadata.py  pdf_models.py  pubmed_pmc.py  qdrant.py
core/src/BFHTW/nlp/: processor.py
core/src/BFHTW/pipelines/: README.md  base_pipeline.py  data_sources.py  document_processing_pipeline.py  main.py  pipeline_manager.py  pubmed_download_and_parse.py  pubmed_fetch_metadata.py  validation.py
(+221 files in other folders)
